--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
         </div>
     </div>
-    <footer>Made by Felix Fernando in Javascript</footer>
+    <footer>Made by Supratik Sarkar in Javascript</footer>
 </body>
 <script src="script.js"></script>
 </html>
